[gd_scene load_steps=10 format=3 uid="uid://c4o4loscit0rt"]

[ext_resource type="Script" path="res://ui/main_menu/server_button/server_button.gd" id="1_jm0gr"]
[ext_resource type="Texture2D" uid="uid://dgq2ci5rqb6w1" path="res://resources/cursors/cursor.png" id="2_8lxbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnkg6"]
bg_color = Color(0.215686, 0.203922, 0.196078, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtds8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc54l"]
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_375u8"]
bg_color = Color(0.6, 0.6, 0.6, 0.458824)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06mwu"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lf13"]

[sub_resource type="ButtonGroup" id="ButtonGroup_fjelw"]
resource_local_to_scene = false
allow_unpress = true

[node name="ServerButton" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pnkg6")
script = ExtResource("1_jm0gr")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconTexture" type="TextureRect" parent="H"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_8lxbd")
stretch_mode = 3

[node name="V" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="NameLabel" type="Label" parent="H/V"]
unique_name_in_owner = true
layout_mode = 2
text = "Default"

[node name="HostLabel" type="Label" parent="H/V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.489622, 0.489622, 0.489622, 1)
text = "/default"

[node name="Control" type="MarginContainer" parent="H"]
layout_mode = 2
theme_override_constants/margin_right = 4

[node name="UserLabel" type="Label" parent="H/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.492616, 0.474896, 0.457192, 1)
text = "default username"

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xtds8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_xc54l")
theme_override_styles/hover = SubResource("StyleBoxFlat_375u8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06mwu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lf13")
toggle_mode = true
button_group = SubResource("ButtonGroup_fjelw")
